# aurum

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  aurum.desktop  install.sh
src/: action.rs  app.rs  config.rs  main.rs  scanner.rs  theme.rs  types.rs
src/backend/: aur.rs  flatpak.rs  highlight.rs  mod.rs  news.rs  paru.rs  store.rs  system.rs  systemd.rs
src/ui/: mod.rs
