[package]
name = "aurum"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
regex = "1.10"
anyhow = "1.0"
git2 = "0.18"
clap = { version = "4.5", features = ["derive"] }
tui-input = "0.8"
directories = "5.0"
dirs = "5.0"
chrono = "0.4"
rss = "2.0"
unicode-width = "0.1"
# Optional syntax highlighting
syntect = "5.2"

[profile.release]
strip = true
opt-level = 3
lto = true
